--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^3.5.5"
+    "@astrojs/tailwind": "^5.0.2",
+    "astro": "^3.5.5",
+    "flowbite": "^2.1.1",
+    "tailwindcss": "^3.3.5"
   }
 }
